--- a/grafana/compose.yaml
+++ b/grafana/compose.yaml
@@ -9,14 +9,14 @@ services:
       - "12345:12345"
       - "4318:4318"
     volumes:
-      - ./config.alloy:/etc/alloy/config.alloy:ro
+      - ./config.alloy:/etc/alloy/custom.alloy:ro
       - grafana-alloy-data:/var/lib/alloy/data
       - /var/run/docker.sock:/var/run/docker.sock:ro
     command: 
       - "run"
       - "--server.http.listen-addr=0.0.0.0:12345"
       - "--storage.path=/var/lib/alloy/data"
-      - "/etc/alloy/config.alloy"
+      - "/etc/alloy/custom.alloy"
     networks:
       - traefik-proxy
     environment:
