--- a/portainer/compose.yaml
+++ b/portainer/compose.yaml
@@ -12,6 +12,8 @@ services:
       - portainer-data:/data
     networks:
       - traefik-proxy
+    environment:
+      - TZ="America/New_York"
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.portainer.rule=Host(`portainer.pi.lan`)"
