--- a/portainer/compose.yaml
+++ b/portainer/compose.yaml
@@ -13,7 +13,7 @@ services:
     networks:
       - traefik-proxy
     environment:
-      - TZ="America/New_York"
+      - TZ=America/New_York
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.portainer.rule=Host(`portainer.pi.lan`)"
