--- a/grafana/compose.yaml
+++ b/grafana/compose.yaml
@@ -11,15 +11,12 @@ services:
     volumes:
       - grafana-alloy-data:/var/lib/alloy/data
       - /var/run/docker.sock:/var/run/docker.sock:ro
-    configs:
-      - source: alloy_config
-        target: /etc/alloy/custom.alloy
-        mode: 0644
+      - ./config.alloy:/etc/alloy/config.alloy:ro
     command: 
       - "run"
       - "--server.http.listen-addr=0.0.0.0:12345"
       - "--storage.path=/var/lib/alloy/data"
-      - "/etc/alloy/custom.alloy"
+      - "/etc/alloy/config.alloy"
     networks:
       - traefik-proxy
     environment:
@@ -27,10 +24,6 @@ services:
       - TZ=America/New_York
     env_file:
       - /home/sathindu/HomeLab/infisical-secrets/.infisical.stacks.grafana.env
-
-configs:
-  alloy_config:
-    file: ./config.alloy
 
 volumes:
   grafana-alloy-data:
