--- a/grafana/compose.yaml
+++ b/grafana/compose.yaml
@@ -11,7 +11,10 @@ services:
     volumes:
       - grafana-alloy-data:/var/lib/alloy/data
       - /var/run/docker.sock:/var/run/docker.sock:ro
-      - ./config.alloy:/etc/alloy/config.alloy:ro
+    configs:
+      - source: alloy-config
+        target: /etc/alloy/config.alloy
+        mode: 0644
     command: 
       - "run"
       - "--server.http.listen-addr=0.0.0.0:12345"
@@ -24,6 +27,10 @@ services:
       - TZ=America/New_York
     env_file:
       - /home/sathindu/HomeLab/infisical-secrets/.infisical.stacks.grafana.env
+
+configs:
+  alloy-config:
+    file: ./config.alloy
 
 volumes:
   grafana-alloy-data:
