--- a/tools/compose.yaml
+++ b/tools/compose.yaml
@@ -25,6 +25,7 @@ services:
       - "traefik.http.routers.code-server.rule=Host(`vsc.pi.lan`)"
       - "traefik.http.routers.code-server.entrypoints=websecure"
       - "traefik.http.routers.code-server.tls=true"
+      - "traefik.http.routers.code-server.middlewares=code-server-headers@file"
       - "traefik.http.services.code-server.loadbalancer.server.port=8443"
 
 networks:
